# finebot

./: Cargo.toml  README.md
src/: actions.rs  clients.rs  events.rs  lib.rs  main.rs  messages.rs  relations.rs
src/clients/: application.rs  builders.rs  connections.rs  middlewares.rs
src/clients/connections/: onebot.rs
src/clients/middlewares/: extensions.rs
src/messages/: base.rs  builders.rs  extensions.rs  mod.rs
