[package]
name = "finebot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.11.0", features = ["full"] }
chrono = "0.4.19"
toml = "0.5.8"
serde = "1.0.130"
serde_derive = "1.0.130"
lazy_static = "1.4.0"
lazy-init = "0.5.0"
tokio-tungstenite = "0.15"
url = "2.2.2"
log = "0.4.14"
simplelog = "0.10.0"
async-trait = "0.1.51"
futures-util = "0.3.17"